# sequencer_project

./: .gitignore  pyproject.toml  requirements.txt  sequencer_fits.py  sequencer_spectra.ipynb
data/: Cl3_553s.fits  HI_4861s.fits  HeII_541s.fits  HeI_588s.fits  N2_6583s.fits  O1_6300s.fits  O2_7330s.fits  O3_4959s.fits  S2_6716s.fits  S3_9069s.fits  combine_fits.py  combined.fits
sequencer_output/: elongations.pkl  final_products.pkl  log_file.txt  sparse_distance_matrix.pkl  weighted_distance_matrix.pkl
